(issue #28) fixed erroneous commit and included proper changes and files  -removed deprecated .txt files -added css rule to provide scrollbar for info bar -added include of new config file in index.html -removed old functions for getting info from files -modified function to parse data from object

--- a/css/general.css
+++ b/css/general.css
@@ -87,6 +87,7 @@ td {
     margin: 1rem 1rem 0rem 0.4rem;
     color: #aaaaaa;
     text-align: center;
+    overflow: auto;
 }
 
 .checkbox-item {
